--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         - "8080:8080"
     web:
       image: docker-tutorial/web
+      command: python manage.py runserver
       build:
         context: ./
         dockerfile: web.dockerfile
