--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "highlight.js": "^9.12.0",
+    "howler": "^2.0.9",
     "marked": "^0.3.15",
-    "vue": "^2.5.2"
+    "moment": "^2.20.1",
+    "raven-js": "^3.22.3",
+    "vue": "^2.5.2",
+    "vue-notification": "^1.3.7",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
