--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.20.1",
     "raven-js": "^3.22.3",
     "vue": "^2.5.2",
+    "vue-analytics": "^5.9.1",
     "vue-notification": "^1.3.7",
     "vue-router": "^3.0.1"
   },
