--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 # Cuz my drafts may contain bad language.
 deploy_app_docker.md
 deploy_app_docker_v2.md
+deploy_app_docker_production.md
+
+
+deploy/test_multistage.dockerfile
 
 __pycache__/
 
