--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,10 +5,6 @@ services:
         build:
           context: ./
           dockerfile: deploy/nginx.dockerfile
-          args:
-            # Relies on the env variable being set! Cant get compose to run a command.
-            # https://github.com/docker/compose/issues/4081
-            COMMIT_HASH: ${COMMIT_HASH}
         ports:
             - "80:80"
         depends_on:
@@ -18,3 +14,6 @@ services:
       command: uwsgi --ini /app/uwsgi.ini
       environment:
         - QUIZ_ENV=production
+    db:
+      volumes:
+        - /quizdata:/var/lib/postgresql/data
