Various fixes picked from nginx-proxy branch

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,5 +1,5 @@
 # prevent from exiting in container
-daemon off;
+#daemon off;  # This is already passed as command line by the nginx dockerfile entrypoint.
 worker_processes auto;
 
 pid /run/nginx.pid;
