--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 # socket is meant to be used with nginx (not directly)
 socket = :3033
-buffet-size=32768
+buffer-size=32768
 master = 1
 module = backend.app
 callable = app
