--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
     nginx:
-        image: tutorial/nginx_front
+        image: docker-tutorial/nginx_front
         build:
           context: ./
           dockerfile: deploy/nginx.dockerfile
         ports:
-            - "80:80"
+          - "80:80"
         depends_on:
           - web  # not optional, nginx crashes if it does not find web. It checks hostname in the startup phase.
           # Fix this: https://sandro-keil.de/blog/2017/07/24/let-nginx-start-if-upstream-host-is-unavailable-or-down/
