--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,19 +1,32 @@
 version: '3'
 services:
     nginx:
-        image: docker-tutorial/nginx_front
-        build:
-          context: ./
-          dockerfile: deploy/nginx.dockerfile
-        ports:
-          - "80:80"
-        depends_on:
-          - web  # not optional, nginx crashes if it does not find web. It checks hostname in the startup phase.
-          # Fix this: https://sandro-keil.de/blog/2017/07/24/let-nginx-start-if-upstream-host-is-unavailable-or-down/
+      image: docker-tutorial/nginx_front
+      build:
+        context: ./
+        dockerfile: deploy/nginx.dockerfile
+      ports:
+        - "80:80"
+      depends_on:
+        - web  # not optional, nginx crashes if it does not find web. It checks hostname in the startup phase.
+        # Fix this: https://sandro-keil.de/blog/2017/07/24/let-nginx-start-if-upstream-host-is-unavailable-or-down/
+      logging: &logging
+        driver: "json-file"
+        options:
+          # Rotate the files when they reach max-size.
+          max-size: "200k"
+          max-file: "10"
+      restart: always
     web:
       command: uwsgi --ini /app/uwsgi.ini
       environment:
         - QUIZ_ENV=production
+      logging:
+        <<: *logging
+      restart: always
     db:
+      logging:
+        <<: *logging
+      restart: always
       volumes:
         - /quizdata:/var/lib/postgresql/data
