--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,6 +16,8 @@ services:
         # Fix this: https://sandro-keil.de/blog/2017/07/24/let-nginx-start-if-upstream-host-is-unavailable-or-down/
       environment:
         - VIRTUAL_HOST=quiz.wat.ldirer.com
+        - LETSENCRYPT_HOST=quiz.wat.ldirer.com
+        - LETSENCRYPT_EMAIL=laurent.direr@gmail.com
       env_file:
         - .env
       logging: &logging
